# CPP_1st_Course

./: .gitignore  CMakeLists.txt  ProdProg.cpp
1/: main.cpp
1st Semestr/Task 1/: 1_10.cpp  1_7.cpp
1st Semestr/Task 2/: 2_1.cpp  2_3.cpp
1st Semestr/Task 3/: 3_3.cpp
1st Semestr/Task 7/: 7_1.cpp  7_1.hpp
1st Semestr/Task 8/: 8_1.cpp
1st_Semestr/Task 1/: 1_2.cpp  1_3.cpp  1_4.cpp  1_5.cpp  1_6.cpp  1_8.cpp  ProdProg.cpp
1st_Semestr/Task 2/: 2_2.cpp
1st_Semestr/Task 4/: 4_1.cpp  4_2.cpp
1st_Semestr/Task 5/: 5_1.cpp  5_3.cpp
1st_Semestr/Task 6/6_1/: 6_1.cpp
1st_Semestr/Task 8/: 8_2.cpp
2nd_Semestr/Task 1/: cube.cpp  cube.hpp  main.cpp  parallelepiped.cpp  parallelepiped.hpp  parallelogram.cpp  parallelogram.hpp  rectangle.cpp  rectangle.hpp  sphere.cpp  sphere.hpp  square.cpp  square.hpp  triangle.cpp  triangle.hpp
2nd_Semestr/Task 2/: main.cpp  matrix.cpp  matrix.hpp
2nd_Semestr/Task 3/: main.cpp
2nd_Semestr/Task 4/: main.cpp
2nd_Semestr/Task 5/: main.cpp  matrix.cpp  matrix.hpp
2nd_Semestr/Task 6/: main.cpp  vectorbool.cpp
2nd_Semestr/Task 7/: bincreator.cpp  main.cpp
2nd_Semestr/Task 8/: main.cpp
Task 1/: 1_1.cpp  1_9.cpp
Task 2/: 2_1.cpp  2_3.cpp
Task 3/: 3_1.cpp  3_2.cpp
Task 5/: 5_1.cpp  5_2.cpp  5_3.cpp  5_3.exe.stackdump
Task 6/: 6_test.exe.stackdump
Task 6/6_1/: 6_1.cpp  6_1.exe.stackdump  6_test.cpp  input.txt
Task Egor/: egor.cpp  egor2.cpp
circle/: main.cpp
